# FAA_TitanicSpace

./: .gitignore  10_FAA_XGB no bins.ipynb  1_FAA_graphs.ipynb  2_FAA_lazy_models.ipynb  2_FAA_models.ipynb  3_FAA_ET Only.ipynb  4_FAA_XGB Only.ipynb  5_FAA_LBGM Only.ipynb  6_FAA_SVC Only.ipynb  7_FAA_LBGM_no_bins.ipynb  7_FAA_LBGM_w_pro.ipynb  8_FAA_CATboost_no_bins.ipynb  8_FAA_CATboost_nobins.ipynb  9_FAA_CATboost_bins.ipynb  9_FAA_models_comp.ipynb  FAA-76558_76748 copy.ipynb  FAA-76558_76748.ipynb  FCD.ipynb  FCD_old.ipynb  Generating-Maps-in-Python.ipynb  README.md  Submission1-76558_76748.ipynb  TimeSeries.ipynb  Titanic_dataplots.ipynb  Waffle-Charts-Word-Clouds-and-Regression-Plots.ipynb  cenas.py  cenas.txt  fcd-76558_76748.ipynb  fcd-JoaoAnt.ipynb  fcd_tiago.ipynb  fcd_with_pca.ipynb  feature_importance.txt  old_FAA_models.ipynb  pyproject.toml  requirements.txt  submission_et.csv  submission_lbgm.csv  submission_lbgm_2.csv
Data/IPMA/: 205-tx-tn-prec.xlsx  320-tx-tn-prec.xlsx
FAA 2/: nc_after_date_diff.ipynb  nc_final.ipynb
FAA_P1_ML2022_76558_76748/: 11_FAA_models_comp.ipynb  2_FAA_lazy_models.ipynb  6_FAA_SVC Only.ipynb  7_FAA_LBGM_no_bins.ipynb  README.md  requirements.txt
FCD/: Generating-Maps-in-Python.ipynb  fcd-76558_76748.ipynb  mapa.html
FCD/new_data/: Portugal.json
FCD_76558_76748/: README.md  fcd-76558_76748.ipynb
Slides/: Slides.pptx  ~$Slides.pptx
data_FAA/: data.pkl
submissions/: submission.csv  submission_cat.csv  submission_cat_bins.csv  submission_cat_nobins.csv  submission_xgb.csv  submission_xgb_nobins.csv
(+13 files in other folders)
