[tool.poetry]
name = "faa"
version = "0.1.0"
description = ""
authors = ["Joao Antonio <joaoantant@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
xgboost = "^1.7.1"
eli5 = "^0.13.0"
jupyter = "^1.0.0"
lightgbm = "^3.3.3"
lazypredict = "^0.2.12"
plotly = "^5.11.0"
category-encoders = "^2.5.1.post0"
bayesian-optimization = "^1.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
